# project

./: $PROFILE.txt  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  WEBSOCKET_TEST_README.md  alembic.ini  docker-compose.yml  env.example  mypy.ini  pyproject.toml  pytest.ini  run_api.py  test.py  test_price_websocket.py
.cursor/rules/: language.mdc  python_package_manager.mdc  specify-rules.mdc
.specify/memory/: constitution.md
alembic/: env.py
alembic/versions/: 001_initial_schema.py  002_remove_unused_timestamp_fields.py
config/: trading_config.yaml
configs/: README.md
configs/binance/: api_config.json  users.json
configs/captcha/: chaojiying.yaml
configs/environments/development/captcha/: chaojiying.yaml
configs/environments/production/captcha/: chaojiying.yaml
configs/environments/testing/captcha/: chaojiying.yaml
data/cache/: token_info.json  token_precision.json
docker/: docker-compose.example.yml  docker-compose.yml
docs/: ENV_PROXY_USAGE.md  PROXY_USAGE_GUIDE.md  README.md  authentication_error_handling.md  batch_execution_logic.md  config_simplification.md  ctrl_c_fix.md  execution_logic_v2_summary.md  fixes_summary.md  how_to_run.md  mulpoint_handling.md  order_websocket_test_guide.md  price_calculation.md  script_usage_guide.md  strategy_execution_flow.md  strategy_optimization_summary.md  strategy_system_summary.md  test_results_batch_execution.md  trading_strategy_guide.md  unified_script_guide.md
docs/api/: common.md  storage.md
docs/binance/: api.md
docs/deployment/: docker.md  monitoring.md  production.md
docs/development/: code-quality.md  setup.md  testing.md
docs/examples/: database.md  redis-usage.md
docs/getting-started/: configuration.md  installation.md  quickstart.md
reports/: API_TEST_REPORT.md  API_TEST_SUCCESS_REPORT.md  COMPLETE_API_TEST_REPORT.md  DDD_STRUCTURE_DESIGN.md  DDD_STRUCTURE_IMPLEMENTATION_REPORT.md  PROJECT_STRUCTURE_CLEANUP.md  PROXY_IMPLEMENTATION_COMPLETE.md  PROXY_OPTIMIZATION_SUMMARY.md  SIMPLIFIED_STRUCTURE_DESIGN.md  SIMPLIFIED_STRUCTURE_IMPLEMENTATION_REPORT.md
scripts/: check_all_users_volume.py  check_db_types.py  cleanup.py  cleanup_logs.py  debug_koge_info.py  load_env.py  manual_oto_test.py  manual_user_volume.py  run_trading_strategy.py  setup_log_cleanup.bat  setup_log_cleanup_task.ps1  simple_airdrop_scores.py  start.py  test_batch_execution.py  test_ctrl_c.py  test_headers_format.py  test_listen_key_quick.py  test_order_websocket.py  test_order_ws_direct.py  test_order_ws_final.py  test_order_ws_simple.py  test_oto_trade.py  test_user2_flow.py  update_user_credentials_quick.py
specs/001-lpha-oto/: clarification-summary.md  data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-lpha-oto/checklists/: requirements.md
specs/001-lpha-oto/contracts/: binance-api.yaml  internal-api.yaml  websocket-messages.yaml
src/BinanceTools/: PROJECT_SUMMARY.md  README.md  main.py
src/BinanceTools/application/: __init__.py
src/BinanceTools/application/dto/: __init__.py  order_dto.py  trade_dto.py  wallet_dto.py
src/BinanceTools/application/interfaces/: __init__.py  portfolio_interface.py  trading_interface.py
src/BinanceTools/application/services/: __init__.py  portfolio_application_service.py  trading_application_service.py
src/BinanceTools/application/use_cases/: __init__.py  cancel_order.py  get_order_history.py  get_trade_history.py  get_trading_volume.py  get_wallet_balance.py  place_order.py
src/BinanceTools/docs/: api.md
src/BinanceTools/domain/: __init__.py
src/BinanceTools/domain/aggregates/: __init__.py  portfolio.py  trading_account.py
src/BinanceTools/domain/entities/: __init__.py  order.py  trade.py  user.py  wallet.py
src/BinanceTools/domain/events/: __init__.py  order_canceled.py  order_created.py  order_filled.py  trade_executed.py  wallet_updated.py
src/BinanceTools/domain/repositories/: __init__.py  order_repository.py  trade_repository.py  user_repository.py  wallet_repository.py
src/BinanceTools/domain/services/: __init__.py  risk_service.py  trading_service.py
src/BinanceTools/domain/value_objects/: __init__.py  money.py  symbol.py  timestamp.py
src/BinanceTools/examples/: __init__.py  api_example.py  sdk_example.py
src/BinanceTools/infrastructure/: __init__.py
src/BinanceTools/infrastructure/adapters/: __init__.py  http_adapter.py  websocket_adapter.py
src/BinanceTools/infrastructure/config/: __init__.py  api_config.py  proxy_config.py  user_config.py
src/BinanceTools/infrastructure/external_services/: __init__.py  binance_api_client.py  binance_websocket_client.py
src/BinanceTools/infrastructure/repositories/: __init__.py  binance_order_repository.py  binance_trade_repository.py  binance_user_repository.py  binance_wallet_repository.py
src/BinanceTools/interfaces/: __init__.py
src/BinanceTools/interfaces/api/: __init__.py  api_app.py  routes.py
src/BinanceTools/interfaces/cli/: __init__.py  cli_app.py  commands.py
src/BinanceTools/interfaces/sdk/: __init__.py  sdk_client.py  (+1 more)
src/BinanceTools/shared/: __init__.py
src/binance/: __init__.py
src/binance/api/: __init__.py  dependencies.py  main.py
src/binance/application/: __init__.py
src/binance/cli/: __init__.py
src/binance/config/: __init__.py  constants.py  settings.py
src/binance/domain/: __init__.py
src/binance/infrastructure/: __init__.py
src/common/: README.md  __init__.py
src/common/captcha/: __init__.py  base.py  config.py
src/common/config/: __init__.py  settings.py
src/common/logging/: __init__.py  logger.py
src/common/security/: __init__.py  hash_util.py  jwt_util.py
src/common/storage/: __init__.py  cache.py  db_client.py  redis_client.py
src/common/utils/: __init__.py  json_util.py  retry_util.py  time_util.py
tests/: FINAL_TEST_REPORT.md  README.md  TEST_SUMMARY.md  __init__.py  conftest.py  test_binance_api.py  test_config.py  test_example.py  test_http_client.py  test_http_client_simple.py  test_multi_user_service.py  test_runner.py  test_utils.py
tests/integration/: test_binance_api.py
(+96 files in other folders)
